<resources>
    <string name="app_name">Sach24h</string>
    <string name="title_home">Trang chủ</string>
    <string name="title_search">Tìm kiếm</string>
    <string name="title_menu">Menu</string>
    <string name="tenTrangChu">Sach24h.com</string>
    <string name="title_event">Sự kiện</string>
    <string name="tatCaTheLoai">Tất cả thể loại</string>
    <string name="sanPhamHot">Sản phẩm hot</string>
    <string name="coLoi">Có lỗi đã xảy ra</string>
    <string name="textNhapTimKiem">Nhập vào từ khóa để tìm</string>
    <string name="tongTien">Tổng tiền:</string>
    <string name="nutThanhToan">Thanh toán</string>
    <string name="nutMuaTiep">Tiếp tục mua sắm</string>
    <string name="nutDangNhap">Đăng nhập</string>
    <string name="nutVeChungToi">Về chúng tôi</string>
    <string name="thayDoiThongTin">Cập nhật</string>
    <string name="nutThongTin">Thông tin cá nhân</string>
    <string name="nutAdmin">Admin</string>
    <string name="nutQuanLiHang">Quản lí hàng</string>
    <string name="nutQuanLiNguoiDung">Quản lí người dùng</string>
    <string name="nutQuanLiDonHang">Quản lí đơn hàng</string>
    <string name="nutQuanLiKhuyenMai">Quản lí khuyến mãi</string>
    <string name="nutMua">Mua hàng</string>
    <string name="nutThongKe">Thống kê</string>
    <string name="quayLai2Lan">Bấm nút Quay Lại lần nữa để thoát</string>
    <string name="matKhau">Mật khẩu của bạn:</string>
    <string name="nhapLaiMatKhau">Nhập lại mật khẩu của bạn:</string>
    <string name="hoTen">Họ tên của bạn:</string>
    <string name="diaChi">Địa chỉ của bạn:</string>
    <string name="email">Email của bạn:</string>
    <string name="nutDangKy">Đăng ký</string>
    <string name="nutHuyBo">Hủy bỏ</string>
    <string name="xemDonHang">Xem đơn hàng</string>
    <string name="dangXuat">Đăng xuất</string>
    <string name="maDonHang">Mã đơn hàng:</string>
    <string name="ngayGiao">Ngày giao:</string>
    <string name="ngayTao">Ngày tạo:</string>
    <string name="soLuong">Số lượng sản phẩm:</string>
    <string name="themSach">Thêm sách</string>
    <string name="suaSach">Sửa sách</string>
    <string name="quanLiSach">Quản lí sách</string>
    <string name="tenSach">Tên sách:</string>
    <string name="soLuongSach">Số lượng:</string>
    <string name="gia">Giá sách:</string>
    <string name="tacGia">Tác giả:</string>
    <string name="namSuatBan">Năm xuất bản:</string>
    <string name="trongLuong">Trọng lượng:</string>
    <string name="kichThuoc">Kích thước:</string>
    <string name="moTaSach">Mô tả sách:</string>
    <string name="soTrang">Số trang:</string>
    <string name="ngonNgu">Ngôn ngữ:</string>
    <string name="nhaCungCap">Nhà cung cấp:</string>
    <string name="theLoai">Thể loại:</string>
    <string name="nhaXuatBan">Nhà xuất bản:</string>
    <string name="quanLiNguoiDung">Quản lí người dùng</string>
    <string name="suaNguoiDung">Sửa người dùng</string>
    <string name="maSach">Mã sách:</string>
    <string name="luotXem">Lượt xem:</string>
    <string name="hoTenNguoiDung">Họ tên:</string>
    <string name="diaChiNguoiDung">Địa chỉ:</string>
    <string name="emailNguoiDung">Email:</string>
    <string name="gioiTinhNguoiDung">Giới tính:</string>
    <string name="ngaySinhNguoiDung">Ngày sinh:</string>
    <string name="quanLiDonHang">Quản lí đơn hàng</string>
    <string name="trangThai">Trạng thái:</string>
    <string name="suaDonHang">Sửa đơn hàng</string>
    <string name="feedBack">Feedback đơn hàng:</string>
    <string name="gui">Gửi</string>
    <string name="quanLiSuKien">Quản lí sự kiện</string>
    <string name="themSuKien">Thêm sự kiện</string>
    <string name="maSuKien">Mã sự kiện:</string>
    <string name="tenSuKien">Tên sự kiện:</string>
    <string name="giaTriKhuyenMai">Giá trị khuyến mãi:</string>
    <string name="ngayBatDau">Ngày bắt đầu:</string>
    <string name="ngayKetThuc">Ngày kết thúc:</string>
    <string name="noiDung">Nội dung:</string>
    <string name="suaSuKien">Sửa sự kiện</string>
    <string name="themcsdl">Thêm CSDL</string>
    <string name="deTrong">Vui lòng không để trống!</string>
</resources>
