<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewMaSach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/maSach"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textViewtTenSach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/tenSach"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textViewGiaSach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/gia"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textViewSoLuong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/soLuongSach"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textViewLuotXem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/luotXem"
        android:textSize="20dp" />
</LinearLayout>