<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SuaNguoiDungActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextHoTen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hoTen"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextMatKhau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/matKhau"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editTextNhapLaiMatKhau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nhapLaiMatKhau"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textViewNgaySinh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:text="Ngày sinh:"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/spinnerGioiTinh"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp" />

        <EditText
            android:id="@+id/editTextDiaChi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/diaChi"
            android:inputType="text" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonSuaNguoiDung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/my_button_orange"
        android:text="@string/suaNguoiDung" />
</LinearLayout>